# ComputerClub

./: .gitignore  .~lock.С++. тестовое.docx#  CMakeLists.txt  ClubManager.cpp  ClubManager.h  FileParser.cpp  FileParser.h  README.md  Time.cpp  Time.h  main.cpp  test2.txt  test3.txt  test4.txt  test5.txt
tests/: CMakeLists.txt  test.cpp
